--- a/TaskManager/Client/Pages/EditTask.razor
+++ b/TaskManager/Client/Pages/EditTask.razor
@@ -23,7 +23,7 @@ else
 
     private bool ready;
     private string error;
-    private TaskItem? TaskItem;
+    private TaskItem TaskItem =new TaskItem();
 
     protected override async Task OnInitializedAsync()
     {
